k8's stuffs/project_deployment_templates/Ingress-Nginx/1-mysql.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: qa-quickops  
spec:
  serviceName: "mysql"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: qa-quickops
spec:
  ports:
    - port: 3306
      targetPort: 3306
  # clusterIP: None
  selector:
    app: mysql
