k8's stuffs/project_deployment_templates/Ingress-Nginx/2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: qa-quickops  
  name: quickopsbe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quickopsbe
  template:
    metadata:
      labels:
        app: quickopsbe
    spec:
      containers:
      - name: quickopsbe
        image: devopsaes/quickops-qa-be:k8s-v0.0.1
        ports:
          - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  namespace: qa-quickops  

  name: quickopsbe-service
spec:
  selector:
    app: quickopsbe
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
